[gd_scene load_steps=8 format=3 uid="uid://t2hjdpxqwp0"]

[ext_resource type="Script" uid="uid://cs616v5dxlgaa" path="res://scenes/caught_ui.gd" id="1_utcin"]
[ext_resource type="Texture2D" uid="uid://nil8pdkbck7j" path="res://assets/tilemap/small_border.png" id="2_utcin"]
[ext_resource type="Texture2D" uid="uid://dyllt6xrqqrc4" path="res://assets/tilemap/small_border_pressed.png" id="3_fbwc8"]
[ext_resource type="Texture2D" uid="uid://bjaa25anuibvf" path="res://assets/tilemap/07 Border 01.png" id="3_fdes3"]
[ext_resource type="Texture2D" uid="uid://biqp7xufwi64q" path="res://assets/coin.png" id="4_fdes3"]
[ext_resource type="Texture2D" uid="uid://cm0djb25hfs5u" path="res://assets/tilemap/small_border_hover.png" id="4_qihh0"]

[sub_resource type="AtlasTexture" id="AtlasTexture_s2baa"]
atlas = ExtResource("3_fdes3")
region = Rect2(64, 64, 64, 64)

[node name="CaughtUI" type="Node2D"]
script = ExtResource("1_utcin")

[node name="UseButton" type="TextureButton" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -171.0
offset_top = -26.0
offset_right = -48.0
offset_bottom = 22.0
grow_horizontal = 2
grow_vertical = 2
texture_normal = ExtResource("2_utcin")
texture_pressed = ExtResource("3_fbwc8")
texture_hover = ExtResource("4_qihh0")

[node name="SellButton" type="TextureButton" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 60.0
offset_top = -24.0
offset_right = 183.0
offset_bottom = 22.0
grow_horizontal = 2
grow_vertical = 2
texture_normal = ExtResource("2_utcin")
texture_pressed = ExtResource("3_fbwc8")
texture_hover = ExtResource("4_qihh0")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(3, 3)
texture = SubResource("AtlasTexture_s2baa")

[node name="Label" type="Label" parent="."]
offset_left = -141.0
offset_top = -12.0
offset_right = -101.0
offset_bottom = 11.0
text = "USE"

[node name="Label2" type="Label" parent="."]
offset_left = 97.0
offset_top = -11.0
offset_right = 163.0
offset_bottom = 12.0
text = "SELL  10"

[node name="RarityLabel" type="Label" parent="."]
offset_left = -312.0
offset_top = -167.0
offset_right = -155.0
offset_bottom = -149.0
scale = Vector2(4, 4)
horizontal_alignment = 1
vertical_alignment = 1

[node name="NameLabel" type="Label" parent="."]
offset_left = -236.0
offset_top = 104.0
offset_right = -79.0
offset_bottom = 122.0
scale = Vector2(3, 3)
horizontal_alignment = 1
vertical_alignment = 1

[node name="Coin" type="Sprite2D" parent="."]
position = Vector2(147, -2)
scale = Vector2(0.01, 0.01)
texture = ExtResource("4_fdes3")

[connection signal="pressed" from="UseButton" to="." method="_on_use_button_pressed"]
[connection signal="pressed" from="SellButton" to="." method="_on_sell_button_pressed"]
